# pypilot-sensors

./: CMakeLists.txt  README.md  library.properties
.github/workflows/: arduino.yml  linux.yml
examples/arduino/SensorsExample/: SensorsExample.ino
examples/linux/: apply_nmea.cpp
src/: pypilot_sensors.cpp  pypilot_sensors.hpp  pypilot_syslib.hpp
src/pypilot_sensors/: data_model_writer.hpp  samples.hpp  sensors_manager.hpp  source_policy.hpp  source_timeout.hpp
src/pypilot_sensors/adapters/: nmea0183_sensor_adapter.hpp  servo_rudder_sensor_adapter.hpp  signalk_sensor_adapter.hpp
src/pypilot_sensors/drivers/: replay_sensor_adapter.hpp
tests/: test_apb_rate_limit.cpp  test_data_model_writer.cpp  test_nmea_adapter.cpp  test_replay_adapter.cpp  test_servo_rudder_adapter.cpp  test_signalk_adapter.cpp  test_source_device_arbitration.cpp  test_source_timeout.cpp
